syntax = "proto3";

package ai.stigmer.commons.sdk;

import "buf/validate/validate.proto";

// SdkMetadata captures information about the SDK that generated a manifest.
//
// This is used across all SDK-CLI contracts (agent, workflow, etc.) to track
// which SDK language and version generated the manifest, enabling:
// - SDK version-specific handling in CLI
// - Debugging and support (knowing which SDK was used)
// - Analytics (SDK adoption tracking)
// - Backward compatibility management
//
// Example usage:
// - AgentManifest (agent/v1/manifest.proto)
// - WorkflowManifest (workflow/v1/manifest.proto - future)
message SdkMetadata {
  // SDK language identifier.
  //
  // Standard values:
  // - "go" - Go SDK (github.com/leftbin/stigmer-sdk/go)
  // - "python" - Python SDK (github.com/leftbin/stigmer-sdk/python)
  // - "typescript" - TypeScript SDK (future)
  // - "java" - Java SDK (future)
  //
  // Must be lowercase, alphanumeric with optional hyphens.
  string language = 1 [(buf.validate.field).string = {
    pattern: "^[a-z][a-z0-9-]*$"
    min_len: 2
    max_len: 50
  }];

  // SDK version using semantic versioning.
  //
  // Examples:
  // - "0.1.0" - Initial release
  // - "1.0.0" - First stable release
  // - "1.2.3-beta.1" - Pre-release version
  //
  // Format: MAJOR.MINOR.PATCH[-PRERELEASE][+BUILD]
  // See: https://semver.org/
  string version = 2 [(buf.validate.field).string = {pattern: "^[0-9]+\\.[0-9]+\\.[0-9]+(-[a-zA-Z0-9.-]+)?(\\+[a-zA-Z0-9.-]+)?$"}];

  // Project name from stigmer.json or code.
  //
  // Optional identifier for the user's project. Can be:
  // - From stigmer.json: "project_name" field
  // - From code: Explicitly set by user
  // - Empty: If not specified
  //
  // Used for:
  // - Display in CLI output
  // - Grouping manifests by project
  // - Analytics and debugging
  string project_name = 3 [(buf.validate.field).string.max_len = 200];

  // Timestamp when manifest was generated (Unix epoch seconds).
  //
  // Automatically set by SDK during synthesis. Used for:
  // - Debugging (when was this manifest created?)
  // - Ordering manifests chronologically
  // - Detecting stale manifests
  //
  // Value: Unix timestamp (seconds since 1970-01-01T00:00:00Z)
  int64 generated_at = 4 [(buf.validate.field).int64.gte = 0];

  // SDK executable path (optional, for debugging).
  //
  // Full path to the SDK executable that generated this manifest.
  // Useful for debugging SDK-specific issues.
  //
  // Examples:
  // - "/usr/local/bin/stigmer-sdk"
  // - "/Users/alice/.local/bin/stigmer"
  // - "C:\\Program Files\\Stigmer\\stigmer-sdk.exe"
  string sdk_path = 5 [(buf.validate.field).string.max_len = 500];

  // Host environment information (optional, for debugging).
  //
  // Information about the host system where manifest was generated.
  // Can include:
  // - OS name and version
  // - Architecture
  // - Runtime version (Go version, Python version, etc.)
  //
  // Example: "darwin-arm64-go1.24.0"
  string host_environment = 6 [(buf.validate.field).string.max_len = 200];
}
